# DC2_ia_mocks

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dc2_halotools.py  dc2_iamock.py  ia_model_components.py
cmake/Modules/: FindFFTW.cmake
notebooks/: Base5000_Investigation.ipynb
src/: main.cpp
tidal_generator/: README.md  job.sh  tidal_generator.py
